Fix collapses in workorder

--- a/public/css/myFrontend.css
+++ b/public/css/myFrontend.css
@@ -9,7 +9,7 @@
 body{
     background-color: #717075;
     font-family: "Trebuchet MS", sans-serif;
-    font-size: 10px;
+    font-size: 14px;
 }
 .title{
     font-family: "Handel Gothic BT Regular",sans-serif;
